feat: Add Ayah info retrieval and enhance planner database
- Implemented `getAyahInfoById` method in `DatabaseHelper` to fetch Ayah details by ID.
- Updated `PlannerDatabaseHelper` to version 2, adding `ayahId` column to `task_notes` table.
- Modified `addNote` method to accept an optional `ayahId` parameter.
- Introduced `getAllNotesWithTasks` method to fetch notes along with their parent task info.
- Created `AyahSearchQuery` utility for parsing Ayah queries.
- Added `CollapsibleNoteCard` widget for displaying notes with Ayah references.
- Updated `pubspec.yaml` for versioning and added `flutter_launcher_icons` dependency.
- Created `set_version.dart` script for automated version updates in `pubspec.yaml`.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hifdh
-description: "A new Flutter project."
+description: "A Quran memorization tracking app."
 publish_to: 'none'
-version: 0.1.0
+version: 1.0.1+101
 
 environment:
   sdk: ^3.9.2
@@ -20,6 +20,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "assets/logo.png"
 
 flutter:
   uses-material-design: true
