--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -50,8 +50,20 @@ jobs:
             mv "$file" "../../../../HifdhTracker_${{ env.VERSION }}_${ABI}_release.apk"
           done
 
-      - name: Upload APK
+      - name: Upload APK (armeabi-v7a)
         uses: actions/upload-artifact@v4
         with:
-          name: HifdhTracker-APKs
-          path: "HifdhTracker_*_release.apk"
+          name: HifdhTracker-armeabi-v7a
+          path: "HifdhTracker_*_armeabi-v7a_release.apk"
+
+      - name: Upload APK (arm64-v8a)
+        uses: actions/upload-artifact@v4
+        with:
+          name: HifdhTracker-arm64-v8a
+          path: "HifdhTracker_*_arm64-v8a_release.apk"
+
+      - name: Upload APK (x86_64)
+        uses: actions/upload-artifact@v4
+        with:
+          name: HifdhTracker-x86_64
+          path: "HifdhTracker_*_x86_64_release.apk"
