--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -83,35 +83,25 @@ jobs:
         run: |
           mv build/app/outputs/flutter-apk/app-release.apk "HifdhTracker_${{ env.VERSION }}_universal_release.apk"
 
-      - name: Send APKs via Telegram
-        if: ${{ secrets.TELEGRAM_BOT_TOKEN != '' && secrets.TELEGRAM_CHAT_ID != '' }}
-        run: |
-          for apk in HifdhTracker_*_release.apk; do
-            curl -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument" \
-              -F chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-              -F document=@"$apk" \
-              -F caption="New build: $apk"
-          done
-
       - name: Upload Universal APK
         uses: actions/upload-artifact@v4
         with:
           name: HifdhTracker-universal
           path: "HifdhTracker_*_universal_release.apk"
 
-      - name: Upload armeabi-v7a
+      - name: Upload APK (armeabi-v7a)
         uses: actions/upload-artifact@v4
         with:
           name: HifdhTracker-armeabi-v7a
           path: "HifdhTracker_*_armeabi-v7a_release.apk"
 
-      - name: Upload arm64-v8a
+      - name: Upload APK (arm64-v8a)
         uses: actions/upload-artifact@v4
         with:
           name: HifdhTracker-arm64-v8a
           path: "HifdhTracker_*_arm64-v8a_release.apk"
 
-      - name: Upload x86_64
+      - name: Upload APK (x86_64)
         uses: actions/upload-artifact@v4
         with:
           name: HifdhTracker-x86_64
