--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hifdh
 description: "A Quran memorization tracking app."
 publish_to: 'none'
-version: 1.0.2+102
+version: 2.0.0+200
 
 environment:
   sdk: ^3.9.2
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.5+1
   intl: ^0.20.2
+  file_picker: ^10.3.8
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
