--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.20.2
   file_picker: ^10.3.8
   share_plus: ^12.0.1
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
